testdata/baselines/reference/submodule/conformance/inferThis.errors.txt
/a.js(5,17): error TS2304: Cannot find name 'T'.
/a.js(14,17): error TS2304: Cannot find name 'T'.


==== /a.js (2 errors) ====
    export class C {
        /**
         * @template T
         * @this {T}
         * @return {T}
                    ~
!!! error TS2304: Cannot find name 'T'.
         */
        static a() {
            return this;
        }
    
        /**
         * @template T
         * @this {T}
         * @return {T}
                    ~
!!! error TS2304: Cannot find name 'T'.
         */
        b() {
            return this;
        }
    }
    
    const a = C.a();
    a; // typeof C
    
    const c = new C();
    const b = c.b();
    b; // C
    